2003-01-13 Reinhard Spisser (reinhard@spisser.it)

	* www/docman/*: fully localized
	
	* www/include/languages/Base.tab: added missing strings

	* www/include/language/Italian.tab: Italian Docman Localization

2003-01-13 Tom Copeland (tom@infoether.com)

	* www/survey/admin/add_survey.php: Survey title is now a required field.
	
	* www/project/admin/qrs.php: File name/type/release name/processor 
	type are now required fields.

2003-01-13  Tim Perdue (tim@gforge.org)

	* more simplication of db_stats_agg.php by creating views

2003-01-13  Scott Armstrong (scottbird7)

	* Fixed/completed /cronjobs/mail/* mailing list and alias creation
	scripts.

2003-01-12  Ryan T. Sammartino  <ryants@shaw.ca>

	* README.Custom: update theme info add add info about "include".

	* www/include/languages/Latin.tab: new file.

	* db/20030112.sql: add Latin as a supported language.

2003-01-11  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/account/index.php: Display new language immediately.

	* www/include/languages/PortugueseBrazilian.tab: use new include
	functionality to get default strings from Portuguese.

	* www/include/languages/Portuguese.tab: add missing newline.

	* www/include/languages/Base.tab: move Savannah-specific strings
	into their own .tab files.

	* www/include/languages/Spanish.tab: ditto.

	* www/themes/savannah_*/{Base,Spanish}.tab: new files with
	Savannah-specific strings.

	* www/include/BaseLanguage.class(loadLanguage): allow
	customisations of strings on a per-theme basis.
	(loadLanguageFile): implement "include" functionality.

	* www/survey/survey_resp.php: Audit: escape special characters
	from user input before submitting to database.

	* www/survey/admin/edit_survey.php: ditto.

	* www/survey/admin/add_survey.php: ditto.

	* www/survey/admin/add_survey.php: add missing <, don't display
	empty table if there are no existing surveys.

	* www/new/index.php: use new frs_dlstats_grouptotal_vw

	* www/include/features_boxes.php(show_top_downloads): use new